# life_game_wgpu

./: Cargo.toml  README.md
src/: compute.rs  compute.wgsl  main.rs  mvp.rs  render.rs  resources.rs  shader.wgsl
