[package]
name = "life_game_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.24.1"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = { version = "0.28.6" }
